Commit querydsl for items